--- a/deploy/index.html
+++ b/deploy/index.html
@@ -39,7 +39,7 @@
                 <h1 class= "header1">Registration</h1>  
             <div class ="button-container" id="red-button"> 
                 <a href="#" class="button">REGISTER HERE</a>
-                <img src= "img/badgesale.png" alt= "badges for sale" style="width:100">
+                <img src= "img/badgesale.png" id= "badge" alt= "badges for sale" style="width:100">
             </div>
         </section>
         
