--- a/deploy/index.html
+++ b/deploy/index.html
@@ -17,7 +17,7 @@
 
     <section id="header">
             <div class="hero-image">
-                <img src= "img/Header_Background.png" alt= "pax floor" width = 100%>
+                <img src= "img/Header_Background.png" alt= "pax floor" width = 100% id="paximg">
             </div>
           
     
